--- a/index.html
+++ b/index.html
@@ -62,5 +62,8 @@ while (res < size){
 </div> 
 </article>
 </div>
+<footer class="container">
+  &copy; 2017 Đại Học Duy Tân
+</footer>
 </body>
 </html>
